<resources>
    <string name="app_name">WQC</string>
    <string name="qrWelcome">Welcome to Weger Quality Control\'s App!</string>
    <string name="qrScanButton">Scan QR Code</string>
    <string name="title_activity_project_main">ProjectMain</string>
    <string name="drawingCheckButton">Drawing</string>
    <string name="datasheetCheckButton">Datasheet</string>
    <string name="controlCardReportButton">Control Card</string>
    <string name="factoryTestReportButton">Factory Test</string>
    <string name="automationComponentsButton">Automation Components</string>
    <string name="electricalReportButton">Electrical Report</string>
    <string name="cancelButton">Cancel</string>
    <string name="projectFinishButton">Finish</string>
    <string name="reportButtonWidth">200dp</string>
    <string name="projectNumberPrefix">Project number:</string>
    <string name="drawingNumberPrefix">Drawing number:</string>
    <string name="partNumberPrefix">Part number:</string>
    <string name="smbConnectError">Unable to connect to the server. Please check your network connection and / or try again later.</string>
    <string name="rdNotChecked">Not checked</string>
    <string name="rdAproved">Approved</string>
    <string name="rdNotAproved">Not Approved</string>
    <string name="rdNotAplicable">Not Applicable</string>
    <string name="editCommentsHint">Comments here…</string>
    <string name="btnTakePicture">Take picture</string>
    <string name="btnErasePicture">Erase picture</string>
    <string name="saveButton">Save</string>
    <string name="dataRecoverError">Unable to recover the requested data. Please try again later.</string>
    <string name="pendingItemsLabel">Pending items</string>
    <string name="btnContinueProject">Continue existing project</string>
    <string name="btnGetProjectFromServer">Get finished project from server</string>
    <string name="projectFinishConfirmation">Are you sure you want to finish the project?</string>
    <string name="yesTAG">Yes</string>
    <string name="noTag">No</string>
    <string name="beginServerConnectionMessage">Trying to contact the server. Please wait for a while.</string>
    <string name="sucessfulServerConnectionMessage">Connection to the server established successful!</string>
    <string name="fileSelectMessage">Select a project from the list</string>
    <string name="projectLabel">Project</string>
    <string name="drawingLabel">Drawing</string>
    <string name="partLabel">Part</string>
    <string name="exitButton">Exit</string>
    <string name="configButton">Config</string>
    <string name="unableToProcced">Unable to proceed</string>
    <string name="unfinishedReportsMessage">There are still some unfinished reports</string>
    <string name="okTag">OK</string>
    <string name="reportComentsHint">General comments here…</string>
    <string name="tvClientText">Client</string>
    <string name="tvComissionText">Commission</string>
    <string name="tvReportCommentsText">General comments</string>
    <string name="tvGeneralCommentsHint">General comments about the inspection</string>
    <string name="tvTestedBy">Tested by</string>
    <string name="btnReportSubmit">Submit reports</string>
    <string name="emptyFieldsError">Unable to proceed when there are empty fields</string>
    <string name="projectInfoTitle">Project info</string>
    <string name="tvConstructionDrawingPath">Drawing folder</string>
    <string name="tvTechnicDatasheetPath">Datasheet folder</string>
    <string name="tvDrawingCode">Drawing code</string>
    <string name="tvDatasheetCode">Datasheet code</string>
    <string name="tvDrawingExtension">Drawing extension</string>
    <string name="tvDatasheetExtension">Datasheet extension</string>
    <string name="tvRootPath">Root path</string>
    <string name="tvServerPath">Server path</string>
    <string name="tvServerUsername">Server username</string>
    <string name="tvServerPassword">Server password</string>
    <string name="tvYearPrefix">Year prefix</string>
    <string name="tvAppPassword">App password</string>
    <string name="unknownErrorMessage">Unknown error</string>
    <string name="configScreenTitle">WQC Parameters</string>
    <string name="valuesSavedMessage">Values saved successfully</string>
    <string name="passwordProtectedTitle">Please enter the password</string>
    <string name="invalidPasswordMessage">Invalid password!</string>
    <string name="invalidQrCodeString">The given qr code format is invalid</string>
    <string name="closeQuestion">Do you wish to close the app?</string>
    <string name="confirmationNeeded">Please confirm your action</string>
    <string name="btnAddMark">Add mark</string>
    <string name="btnUndo">Undo</string>
    <string name="btnAddAltText">Cancel add</string>
    <string name="btnPreviousText">"&lt;"</string>
    <string name="btnNextText">"&gt;"</string>
    <string name="invalidDocumentCodesMessage">Unable to proceed. Please check the app parameters (Drawing code + extension and Datasheet code + extension</string>
    <string name="successfulServerUploadMessage">Project processed successfully!</string>
    <string name="invalidServerFileMessage">The file in the server is invalid / corrupted. Please replace it with a valid one and try again.</string>
    <string name="tryAgainMessage">Do you want to try again?</string>
    <string name="permissionsNeededMessage">Not all needed permissions were granted to the app. Without them, it\'s impossible to continue. The app will be closed now.</string>
    <string name="noPermissionsGrantedTitle">Permissions missing</string>
    <string name="elTag">EL</string>
    <string name="magTag">MG</string>
    <string name="itemTag">Item</string>
    <string name="overallProgressLabel">Overall progress:</string>
    <string name="operationProgressLabel">"Operation progress: "</string>
    <string name="wiredDrawingLabel">Drawing (EL)</string>
    <string name="cablelessDrawingLabel">Drawing</string>
    <string name="wiredDatasheetLabel">Datasheet (EL)</string>
    <string name="controlCardLabel">Control card</string>
    <string name="cancelTag">Cancel</string>
    <string name="serverPathRequestMessage">Please enter the server path</string>
    <string name="serverConnectErrorMessage">Unable to connect to the server. Please check it\'s address and try again.</string>
    <string name="deviceNotAuthorizedMessage">No authorization found for your device. Please show this screen to the system\'s administrator.</string>
    <string name="closeTag">Close</string>
    <string name="tryAgainTag">Try again</string>
    <string name="notImplementedMessage">Not implemented yet!</string>
    <string name="unknownDeviceMessage">Unknown device</string>
    <string name="usernameTag">Username</string>
    <string name="roleTag">Role</string>
    <string name="addeddateTag">Added on</string>
    <string name="removeTag">Remove</string>
    <string name="cablelessDatasheetLabel">Datasheet</string>
    <string name="getMorePicturesTag">Do you want to take more pictures?</string>
    <string name="noDataTag">No data</string>
    <string name="picturesListTag">General pictures list</string>
    <string name="retrievingGeneralPicturesTag">Retrieving General Photos</string>
    <string name="retrievingPdfsTag">Retrieving pdf files</string>
    <string name="retrievingReportPicturesTag">Retrieving control card pictures</string>
    <string name="remainingTag">Remaining items: %d</string>
    <string name="finishedTag">Finished</string>
    <string name="mustWaitCompletion">Please wait until the current task is finished</string>
    <string name="picturesUploadTag">Pictures postType</string>
    <string name="fileNotFoundMessage">This file cannot be found or accessed at this time. Please contact your system administrator!</string>
    <string name="staleDataMessage">Your data is stale. Please try again. This error occurs because someone may have changed something and you did not get the last copy.</string>
    <string name="noRolesMessage">This device\'s roles list is empty. Please contact your system admin.</string>
    <string name="accessDisabledMessage">System access for this device is disabled. Please contact your system administrator.</string>
    <string name="invalidUsernameMessage">This device\'s username is invalid. Please contact your system admin.</string>
    <string name="retrievingFilesTag">Retrieving files from server</string>
    <string name="commentsLabel">Comments here…</string>
    <string name="reportFinishMessage">Do you want to set this report as finished? No changes are allowed while report is set as finished!</string>
    <string name="reportUnfinishMessage">Do you want to set this report as not finished? This will allow the report to be edited!</string>
    <string name="noMarksMessage">You can\'t set as finished a report that has no marks!</string>
    <string name="pendingItemsMessage">You can\'t set as finished a report that still has \'not checked\' items!</string>
    <string name="changesSavedMessage">Changes saved successfully!</string>
    <string name="clientNameInformMessage">Please inform the customer name</string>
    <string name="qrScanQuestion">Would you like to do a new qr code scan?</string>
    <string name="invalidPictureFilenameMessage">Unable to save the changes due to invalid picture filename!</string>
    <string name="errorMsgMalformedRequest">There is a problem with the current request.</string>
    <string name="tryAgainLaterMessage">Please try again later.</string>
    <string name="projectCreationRequestFailed">A request for a project creation has failed.</string>
    <string name="invalidEntityError">Unable to get a project/report data.</string>
    <string name="invalidItemIdError">Unable to get the selected item\'s data.</string>
    <string name="reportPageLoadFailed">Failed to load this report\'s page!</string>
    <string name="photoCaptureError">Error setting photo capture!</string>
    <string name="invalidVersionMessage">The version of the server does not match the version of the client!</string>
    <string name="sendToServerTag">Send to server</string>
    <string name="newPicturesTag">New pictures</string>
    <string name="messagingServiceConnectingMessage">Connecting to the messaging service</string>
    <string name="pleaseWaitMessage">Please wait for a while…</string>
    <string name="projectLoadingMessage">Loading project info</string>
    <string name="configLoadingMessage">Loading configurations</string>
    <string name="updatesChannelName">ProjectUpdates</string>
    <string name="updatesChannelDescription">Notifies the user about external updates to projects for real-time operation</string>
    <string name="updatesChannelId" translatable="false">UPDATES_CHANNEL</string>
    <string name="projectUpdatedMessage">Project updated</string>
    <string name="pushMessageConnectionFailed">Failed to connect to the real-time update service. App will now be closed.</string>
    <string name="cancelQuestion">Do you wish to cancel the current operation?</string>

    <string name="beginUploadQuestion">Do you want to upload the photos taken?</string>
    <string name="pictureRemoveQuestion">Would you like to remove this picture from the upload list?</string>
    <string name="qrProcessingFailed">Failed to process qr code data!</string>

</resources>
